archive/k8s/workspace-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspace-test
  template:
    metadata:
      labels:
        app: workspace-test
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: workspace-test
          image: ghcr.io/marcelphilippeandrade/workspace-test
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
