archive/k8s/workspace-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: workspace-test-ingress

spec:
  rules:
    - host: workspace-test.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: workspace-test
                port:
                  number: 80
